--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                                             class="d-flex justify-content-center align-items-center text-start flex-column w-100 course-box px-3 py-4 bg-course-6">
                                             <img src="images/brandslogo/5.png" alt="Phonic Star English Fluency Program"
                                                 class="course-logo" loading="lazy" width="60" height="60">
-                                            <h4>Phonic Star</h4>
+                                            <h4>Phonic's Star</h4>
                                             <p class="m-0">Learn fluent English communication with a strong
                                                 foundation
                                                 in UK standards and style.</p>
