--- a/our-courses/creative-arts-india.html
+++ b/our-courses/creative-arts-india.html
@@ -647,26 +647,19 @@
             </div>
         </section>
         <!-- cta -->
-        <!-- cta -->
-        <section id="cta" class="container py-5">
-            <div class="cta-glass-box text-center p-5 rounded-4 position-relative overflow-hidden">
-                <div class="position-relative z-2">
-                    <h2 class="display-4 fw-bold text-white mb-4">Unlock Your Artistic Potential Today</h2>
-                    <p class="lead text-white-50 mb-5 mx-auto" style="max-width: 700px;">
-                        Enroll your child in our creative arts program or begin your own journey with Creative Arts
-                        India.
-                        Experience the joy of art and expression!
-                    </p>
-                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn-2">
-                        <span>Get In Touch <i class="fa-solid fa-arrow-right ms-2"></i></span>
-                    </button>
-                </div>
-                <!-- Decorative Elements -->
-                <div class="position-absolute top-0 start-0 w-100 h-100 z-1">
-                    <div class="position-absolute top-0 end-0 bg-primary opacity-25 rounded-circle"
-                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(30%, -30%);"></div>
-                    <div class="position-absolute bottom-0 start-0 bg-secondary opacity-25 rounded-circle"
-                        style="width: 300px; height: 300px; filter: blur(80px); transform: translate(-30%, 30%);"></div>
+        <section id="cta" class="container-fluid py-5 d-flex align-items-center justify-content-center">
+            <div class="container d-flex justify-content-center align-items-center">
+                <div class="cta-glass-box text-center p-4 p-md-5">
+                    <h2 class="display-4 fw-bold mb-4">Unlock Your Artistic Potential Today</h2>
+                    <p class="lead mb-4">Enroll your child in our creative arts program or begin your own journey
+                        with Creative Arts India. Experience the joy of art and expression!</p>
+                    <div class="d-flex justify-content-center">
+                        <a href="../contact-us.html" id="chat-box"
+                            class="theme-btn-cta mt-2 text-decoration-none d-inline-flex align-items-center">
+                            <span>Get In Touch</span>
+                            <i class="bi bi-chat-right-text-fill ms-2"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
