--- a/franchise.html
+++ b/franchise.html
@@ -774,15 +774,20 @@
             </div>
         </section>
         <!-- cta -->
-        <section id="cta" class="container-fluid py-5">
-            <div
-                class="banner-content-box overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                <div class="text-center text-white p-3">
-                    <h2 class="display-3 fw-bold">Start Your Abacus Franchise Today</h2>
-                    <p>Become a part of Indias leading abacus training provider. Enroll your child or join us as a
-                        franchise partner to spread the power of abacus learning across India.</p>
-                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn mt-3">Get In Touch <i
-                            class="fa-solid fa-pen-clip"></i></button>
+        <section id="cta" class="container-fluid py-5 d-flex align-items-center justify-content-center">
+            <div class="container d-flex justify-content-center align-items-center">
+                <div class="cta-glass-box text-center p-4 p-md-5">
+                    <h2 class="display-4 fw-bold mb-4">Start Your <span class="text-warning">Abacus Franchise
+                            Today</span></h2>
+                    <p class="lead mb-4">Become a part of India's leading abacus training provider. Enroll your child or
+                        join us as a franchise partner to spread the power of abacus learning across India.</p>
+                    <div class="d-flex justify-content-center">
+                        <a href="contact-us.html" id="chat-box"
+                            class="theme-btn-cta mt-2 text-decoration-none d-inline-flex align-items-center">
+                            <span>Get In Touch</span>
+                            <i class="bi bi-chat-right-text-fill ms-2"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
