--- a/our-courses/my-math.html
+++ b/our-courses/my-math.html
@@ -353,38 +353,66 @@
     <main style="overflow:hidden" class="w-100">
         <!-- banner -->
         <!-- banner -->
-        <section class="position-relative py-5 overflow-hidden hero-section">
-            <div class="container position-relative z-1">
-                <div class="row align-items-center g-5">
-                    <div class="col-lg-6">
-                        <nav aria-label="breadcrumb" class="mb-4">
-                            <ol class="breadcrumb bg-transparent p-0 mb-0">
-                                <li class="breadcrumb-item"><a href="../index.html"
-                                        class="text-decoration-none text-muted">Home</a></li>
-                                <li class="breadcrumb-item active text-dark fw-semibold" aria-current="page">My Math
-                                </li>
-                            </ol>
-                        </nav>
-                        <h1 class="display-3 fw-bold mb-4 text-dark hero-title">
-                            Master <span class="text-gradient">Vedic Mathematics</span>
-                        </h1>
-                        <p class="lead text-secondary mb-5 hero-text">
-                            Discover the power of Vedic maths and Abacus math to boost your child's
-                            arithmetic skills through online and in-person classes.
-                        </p>
-                        <div class="d-flex gap-3">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
-                                class="theme-btn-2 text-decoration-none">
-                                <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 position-relative d-none d-lg-block">
-                        <div class="hero-image-wrapper p-4 pe-0 position-relative">
-                            <img src="https://www.playabacusindia.com/images/banner/2.webp"
-                                class="img-fluid rounded-4 shadow-lg position-relative z-2" alt="My Math Course">
-                            <!-- Floating Elements -->
+        <section id="banner" class="container-fluid pt-0 pt-md-0">
+            <div class="row">
+                <div class="col-12 p-0">
+                    <div class="hero-section d-flex align-items-center position-relative overflow-hidden">
+                        <!-- Background Shapes -->
+                        <div class="hero-shape shape-1"></div>
+                        <div class="hero-shape shape-2"></div>
 
+                        <div class="container py-4">
+                            <div class="row align-items-center gy-5">
+                                <!-- Text Content -->
+                                <div class="col-lg-6 order-2 order-lg-1">
+                                    <div class="hero-content pe-lg-5 text-center text-lg-start">
+                                        <div class="badge-pill mb-3 fade-in-up delay-1">
+                                            <i class="fa-solid fa-star text-warning me-2"></i> Trusted by 3 Lakh+
+                                            Parents
+                                        </div>
+                                        <h1
+                                            class="display-5 display-lg-4 fw-bold mb-4 text-dark hero-title fade-in-up delay-2">
+                                            Master <span class="text-gradient">Vedic Mathematics</span>
+                                        </h1>
+
+                                        <!-- Breadcrumb -->
+                                        <nav aria-label="breadcrumb"
+                                            class="fade-in-up delay-2 mb-4 d-flex justify-content-center justify-content-lg-start">
+                                            <ol
+                                                class="breadcrumb mb-0 p-2 rounded-pill bg-light shadow-sm d-inline-flex">
+                                                <li class="breadcrumb-item"><a href="../index.html"
+                                                        class="text-decoration-none text-muted"><i
+                                                            class="fa-solid fa-house me-1"></i> Home</a></li>
+                                                <li class="breadcrumb-item active text-primary fw-bold"
+                                                    aria-current="page">My Math</li>
+                                            </ol>
+                                        </nav>
+
+                                        <p class="lead text-secondary mb-5 hero-text fade-in-up delay-3">
+                                            Discover the power of Vedic maths and Abacus math to boost your child's
+                                            arithmetic skills through online and in-person classes.
+                                        </p>
+                                        <div
+                                            class="d-flex justify-content-center justify-content-lg-start gap-3 fade-in-up delay-4">
+                                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
+                                                class="theme-btn-2 text-decoration-none">
+                                                <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Image Content -->
+                                <div class="col-lg-6 order-1 order-lg-2">
+                                    <div class="hero-image-wrapper position-relative text-center slide-in-right">
+                                        <div class="hero-img-container">
+                                            <img src="https://www.playabacusindia.com/images/banner/2.webp"
+                                                class="img-fluid rounded-4 shadow-premium hero-main-img"
+                                                alt="My Math Course" fetchpriority="high" width="600" height="400">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
