--- a/what-is-the-right-age-for-a-child-to-learn-abacus.html
+++ b/what-is-the-right-age-for-a-child-to-learn-abacus.html
@@ -144,14 +144,14 @@
             src="https://www.facebook.com/tr?id=4105191913057058&ev=PageView&noscript=1" /></noscript>
     <!-- End Meta Pixel Code -->
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17517142887"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17517142887"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'AW-17517142887');
-</script>
+        gtag('config', 'AW-17517142887');
+    </script>
 
 </head>
 
@@ -366,34 +366,71 @@
         <section id="banner" class="container-fluid pt-0 pt-md-0">
             <div class="row">
                 <div class="col-12 p-0">
-                    <div id="banner-slide" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                        <div class="carousel-inner h-100">
-                            <div class="carousel-item h-100 active position-relative">
-                                <img src="images/banner/9.webp" class="d-block w-100" alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h1 class="display-3 fw-bold">Right Age to Start Abacus</h1>
-                                        <p>Wondering what is the right age for a child to learn abacus? Here's what
-                                            every parent should know.</p>
-                                        <nav aria-label="breadcrumb" class="breadcrumb-box">
-                                            <ol class="breadcrumb">
-                                                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                                                <li class="breadcrumb-item active" aria-current="page">What Is The Right
-                                                    Age For A Child To Learn Abacus</li>
+                    <!-- Modern Hero Section -->
+                    <div class="hero-section d-flex align-items-center position-relative overflow-hidden">
+                        <!-- Background Shapes -->
+                        <div class="hero-shape shape-1"></div>
+                        <div class="hero-shape shape-2"></div>
+
+                        <div class="container py-4">
+                            <div class="row align-items-center gy-5">
+                                <!-- Text Content -->
+                                <div class="col-lg-6 order-2 order-lg-1">
+                                    <div class="hero-content pe-lg-5 text-center text-lg-start">
+                                        <div class="badge-pill mb-3 fade-in-up delay-1">
+                                            <i class="fa-solid fa-star text-warning me-2"></i> 23 Years of Excellence
+                                        </div>
+                                        <h1
+                                            class="display-5 display-lg-4 fw-bold mb-4 text-dark hero-title fade-in-up delay-2">
+                                            Right Age to Start <span class="text-gradient">Abacus</span>
+                                        </h1>
+
+                                        <!-- Breadcrumb -->
+                                        <nav aria-label="breadcrumb"
+                                            class="fade-in-up delay-2 mb-4 d-flex justify-content-center justify-content-lg-start">
+                                            <ol
+                                                class="breadcrumb mb-0 p-2 rounded-pill bg-light shadow-sm d-inline-flex">
+                                                <li class="breadcrumb-item"><a href="index.html"
+                                                        class="text-decoration-none text-muted"><i
+                                                            class="fa-solid fa-house me-1"></i> Home</a></li>
+                                                <li class="breadcrumb-item active text-primary fw-bold"
+                                                    aria-current="page">Right Age for Abacus</li>
                                             </ol>
                                         </nav>
+
+                                        <p class="lead text-secondary mb-5 hero-text fade-in-up delay-3">
+                                            Wondering what is the right age for a child to learn abacus? Here's what
+                                            every parent should know.
+                                        </p>
+                                        <div
+                                            class="d-flex justify-content-center justify-content-lg-start gap-3 fade-in-up delay-4">
+                                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
+                                                class="theme-btn-2 text-decoration-none">
+                                                <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Image Content -->
+                                <div class="col-lg-6 order-1 order-lg-2">
+                                    <div class="hero-image-wrapper position-relative text-center slide-in-right">
+                                        <!-- Main Image -->
+                                        <div class="hero-img-container">
+                                            <img src="images/banner/9.webp" alt="Abacus class and Franchises"
+                                                class="img-fluid rounded-4 shadow-premium hero-main-img"
+                                                fetchpriority="high" width="600" height="400">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
         <!-- info section -->
-        <section id="info-new-sec" class="container-fluid">
+        <section id="info-new-sec" class="container-fluid my-5">
             <div class="container">
                 <div class="row p-3">
                     <div class="col-6 col-md-6 col-lg-3">
@@ -408,7 +445,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-graduation-cap"></i>
                             </div>
@@ -419,7 +457,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-trophy"></i>
                             </div>
@@ -430,7 +469,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-end align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-end align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-gem"></i>
                             </div>
@@ -524,7 +564,7 @@
                 class="banner-content-box overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
                 <div class="text-center text-white p-3">
                     <h2 class="display-3 fw-bold">Enroll Your Child in IPA Abacus Today!</h2>
-                    <p>Give your child the competitive edge they deserve with IPA Abacus  Indias trusted name in
+                    <p>Give your child the competitive edge they deserve with IPA Abacus Indias trusted name in
                         abacus education. Whether you're looking for the best abacus classes online or a reputed abacus
                         training centre, we're here to guide your child every step of the way. Lets build confident
                         learners together.</p>
@@ -623,18 +663,24 @@
                     </div>
                     <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon mt-2"
                         id="footer-social-section">
-                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
-                                src="images/socialicons/facebook.svg" alt="Facebook" loading="lazy"></a>
-                        <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
-                                src="images/socialicons/instagram.svg" alt="Instagram" loading="lazy"></a>
-                        <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="images/socialicons/x-white.svg"
-                                alt="X" loading="lazy"></a>
-                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><img
-                                src="images/socialicons/whatsapp.svg" alt="WhatsApp" loading="lazy"></a>
-                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><img
-                                src="images/socialicons/youtube.svg" alt="YouTube" loading="lazy"></a>
-                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" title="LinkedIn"><img
-                                src="images/socialicons/linkedin.svg" alt="LinkedIn" loading="lazy"></a>
+                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" target="_blank"
+                            rel="noopener noreferrer" title="Facebook"><img src="images/socialicons/facebook.svg"
+                                alt="Facebook" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.instagram.com/ideal_play_abacus_india/" target="_blank"
+                            rel="noopener noreferrer" title="Instagram"><img src="images/socialicons/instagram.svg"
+                                alt="Instagram" loading="lazy" width="30" height="30"></a>
+                        <a href="https://x.com/PlayAbacus" target="_blank" rel="noopener noreferrer"
+                            title="X (Twitter)"><img src="images/socialicons/x-white.svg" alt="X" loading="lazy"
+                                width="30" height="30"></a>
+                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." target="_blank"
+                            rel="noopener noreferrer" title="WhatsApp"><img src="images/socialicons/whatsapp.svg"
+                                alt="WhatsApp" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" target="_blank"
+                            rel="noopener noreferrer" title="YouTube"><img src="images/socialicons/youtube.svg"
+                                alt="YouTube" loading="lazy" width="30" height="30"></a>
+                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" target="_blank"
+                            rel="noopener noreferrer" title="LinkedIn"><img src="images/socialicons/linkedin.svg"
+                                alt="LinkedIn" loading="lazy" width="30" height="30"></a>
                     </div>
                 </div>
             </div>
@@ -660,7 +706,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="d-flex justify-content-center align-items-center w-100 text-center">
-                            <p class="m-0">Â© <span id="year"></span> Ideal Play Abacus India Pvt. Ltd. All rights
+                            <p class="m-0">© <span id="year"></span> Ideal Play Abacus India Pvt. Ltd. All rights
                                 reserved.</p>
                         </div>
                     </div>
@@ -750,7 +796,3 @@
 </body>
 
 </html>
-
-
-
-
