--- a/blog.html
+++ b/blog.html
@@ -368,37 +368,65 @@
     <main style="overflow:hidden" class="w-100">
         <!-- banner -->
         <!-- banner -->
-        <section class="position-relative py-5 overflow-hidden hero-section">
-            <div class="container position-relative z-1">
-                <div class="row align-items-center g-5">
-                    <div class="col-lg-6">
-                        <nav aria-label="breadcrumb" class="mb-4">
-                            <ol class="breadcrumb bg-transparent p-0 mb-0">
-                                <li class="breadcrumb-item"><a href="index.html"
-                                        class="text-decoration-none text-muted">Home</a></li>
-                                <li class="breadcrumb-item active text-dark fw-semibold" aria-current="page">Blog</li>
-                            </ol>
-                        </nav>
-                        <h1 class="display-3 fw-bold mb-4 text-dark hero-title">
-                            Our <span class="text-gradient">Blog</span>
-                        </h1>
-                        <p class="lead text-secondary mb-5 hero-text">
-                            Learn how abacus learning enhances brain development, mental arithmetic, and
-                            cognitive skills with Ideal Play Abacus India.
-                        </p>
-                        <div class="d-flex gap-3">
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
-                                class="theme-btn-2 text-decoration-none">
-                                <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 position-relative d-none d-lg-block">
-                        <div class="hero-image-wrapper p-4 pe-0 position-relative">
-                            <img src="https://www.playabacusindia.com/images/banner/6.webp"
-                                class="img-fluid rounded-4 shadow-lg position-relative z-2" alt="Abacus Blog">
-                            <!-- Floating Elements -->
+        <section id="banner" class="container-fluid pt-0 pt-md-0">
+            <div class="row">
+                <div class="col-12 p-0">
+                    <!-- Modern Hero Section -->
+                    <div class="hero-section d-flex align-items-center position-relative overflow-hidden">
+                        <!-- Background Shapes -->
+                        <div class="hero-shape shape-1"></div>
+                        <div class="hero-shape shape-2"></div>
 
+                        <div class="container py-4">
+                            <div class="row align-items-center gy-5">
+                                <!-- Text Content -->
+                                <div class="col-lg-6 order-2 order-lg-1">
+                                    <div class="hero-content pe-lg-5 text-center text-lg-start">
+                                        <h1
+                                            class="display-5 display-lg-4 fw-bold mb-4 text-dark hero-title fade-in-up delay-2">
+                                            Our <span class="text-gradient">Blog</span>
+                                        </h1>
+
+                                        <!-- Breadcrumb -->
+                                        <nav aria-label="breadcrumb"
+                                            class="fade-in-up delay-2 mb-4 d-flex justify-content-center justify-content-lg-start">
+                                            <ol
+                                                class="breadcrumb mb-0 p-2 rounded-pill bg-light shadow-sm d-inline-flex">
+                                                <li class="breadcrumb-item"><a href="index.html"
+                                                        class="text-decoration-none text-muted"><i
+                                                            class="fa-solid fa-house me-1"></i> Home</a></li>
+                                                <li class="breadcrumb-item active text-primary fw-bold"
+                                                    aria-current="page">Blog</li>
+                                            </ol>
+                                        </nav>
+
+                                        <p class="lead text-secondary mb-5 hero-text fade-in-up delay-3">
+                                            Learn how abacus learning enhances brain development, mental arithmetic, and
+                                            cognitive skills with Ideal Play Abacus India.
+                                        </p>
+                                        <div
+                                            class="d-flex justify-content-center justify-content-lg-start gap-3 fade-in-up delay-4">
+                                            <a href="#" data-bs-toggle="modal" data-bs-target="#enquiryModal"
+                                                class="theme-btn-2 text-decoration-none">
+                                                <span>Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i></span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Image Content -->
+                                <div class="col-lg-6 order-1 order-lg-2">
+                                    <div class="hero-image-wrapper position-relative text-center slide-in-right">
+                                        <!-- Main Image -->
+                                        <div class="hero-img-container">
+                                            <img src="https://www.playabacusindia.com/images/banner/6.webp"
+                                                alt="Abacus Blog"
+                                                class="img-fluid rounded-4 shadow-premium hero-main-img"
+                                                fetchpriority="high" width="600" height="400">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -973,18 +1001,23 @@
                     </div>
                     <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon mt-2"
                         id="footer-social-section">
-                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
-                                src="images/socialicons/facebook.svg" alt="Facebook" loading="lazy"></a>
-                        <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
-                                src="images/socialicons/instagram.svg" alt="Instagram" loading="lazy"></a>
-                        <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="images/socialicons/x-white.svg"
-                                alt="X" loading="lazy"></a>
-                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><img
-                                src="images/socialicons/whatsapp.svg" alt="WhatsApp" loading="lazy"></a>
-                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><img
-                                src="images/socialicons/youtube.svg" alt="YouTube" loading="lazy"></a>
-                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" title="LinkedIn"><img
-                                src="images/socialicons/linkedin.svg" alt="LinkedIn" loading="lazy"></a>
+                        <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" target="_blank"
+                            rel="noopener noreferrer" title="Facebook"><img src="images/socialicons/facebook.svg"
+                                alt="Facebook" loading="lazy"></a>
+                        <a href="https://www.instagram.com/ideal_play_abacus_india/" target="_blank"
+                            rel="noopener noreferrer" title="Instagram"><img src="images/socialicons/instagram.svg"
+                                alt="Instagram" loading="lazy"></a>
+                        <a href="https://x.com/PlayAbacus" target="_blank" rel="noopener noreferrer"
+                            title="X (Twitter)"><img src="images/socialicons/x-white.svg" alt="X" loading="lazy"></a>
+                        <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." target="_blank"
+                            rel="noopener noreferrer" title="WhatsApp"><img src="images/socialicons/whatsapp.svg"
+                                alt="WhatsApp" loading="lazy"></a>
+                        <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" target="_blank"
+                            rel="noopener noreferrer" title="YouTube"><img src="images/socialicons/youtube.svg"
+                                alt="YouTube" loading="lazy"></a>
+                        <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd" target="_blank"
+                            rel="noopener noreferrer" title="LinkedIn"><img src="images/socialicons/linkedin.svg"
+                                alt="LinkedIn" loading="lazy"></a>
                     </div>
                 </div>
             </div>
@@ -1010,7 +1043,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="d-flex justify-content-center align-items-center w-100 text-center">
-                            <p class="m-0">Â© <span id="year"></span> Ideal Play Abacus India Pvt. Ltd. All rights
+                            <p class="m-0">© <span id="year"></span> Ideal Play Abacus India Pvt. Ltd. All rights
                                 reserved.</p>
                         </div>
                     </div>
